# bp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  bmp_reader.hpp
.github/workflows/: ci.yml
include/bp/: bmp_reader.hpp
test/: test.cpp
tests/: test.cpp
